# jen_CalHacks_11.0

./: README.md
backend/: Makefile  pyproject.toml
backend/backend/: main.py
backend/backend/src/: app.py
backend/backend/src/ai_routes/data_access/: repository.py
backend/backend/src/commons/error_handling/: domain_violation_error.py  http_error.py  repository_error.py
backend/backend/src/commons/utils/: env_config.py
backend/backend/src/memory_service/: memory.py  routes.py
backend/backend/src/search_service/: groq_service.py  perplexity_service.py  search_agent.py  search_routes.py  test.json
callHospital/: checkAvailability.py  confirmAppointment.py
callHospital/vapi_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
frontend/: Makefile  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.js  page.js
frontend/src/app/chats/: page.js
frontend/src/app/memories/: page.js
frontend/src/features/chat/: index.ts
frontend/src/features/chat/components/: ChatMenu.tsx  ChatPage.tsx  ChatStartupPage.tsx  General.tsx  assistantConfig.js
frontend/src/features/chat/components/SharedComponents/: Input.tsx
frontend/src/features/chat/components/types/: chat.schema.ts  (+2 more)
frontend/src/features/chat/prompts/: Jouvire4u.ts
frontend/src/features/memories/: Memories.jsx
frontend/src/features/memories/MemoryComponents/: MemoryBoard.jsx  MemoryBox.jsx
frontend/src/features/navbar/: Narbar.jsx
frontend/src/features/navbar/navbarComponents/: NavbarContent.jsx  NavbarItem.jsx
temporary/: fetchai.py  main.py
(+8 files in other folders)
